# omnirob_robin

./: README.md
omnirob_robin/: package.xml
omnirob_robin_bringup/: CMakeLists.txt  package.xml
omnirob_robin_bringup/include/: omnirob_kinect.launch
omnirob_robin_bringup/launch/: joystick_teleop.launch  keyboard_teleop.launch  kinect2.launch  omnirob.launch  simulation.launch
omnirob_robin_control/: CMakeLists.txt  package.xml
omnirob_robin_control/config/: base_control.yaml  gripper_control.yaml  joint_states.yaml  pan_tilt_control.yaml
omnirob_robin_control/launch/: all_controllers.launch  gripper_control.launch  joint_states.launch  lwa_control.launch  lwa_control_real.launch  pan_tilt_control.launch
omnirob_robin_control/src/: follow_joint_trajectory_controller.cpp  follow_joint_trajectory_controller_test_client.cpp  rotational_drift_compensator.cpp
omnirob_robin_demo/: CMakeLists.txt  package.xml
omnirob_robin_demo/launch/: base_demo.launch  base_slam.launch  hector_demo.launch  parameters_demo.launch  pick_and_place_demo.launch  pick_and_place_demo_new.launch  scan_matching_demo.launch
omnirob_robin_demo/src/: base_demo.cpp  parameters_demo.cpp  pick_and_place_demo.cpp  scan_matching_demo.cpp
omnirob_robin_detection_reels/: CMakeLists.txt  CMakeLists.txt~  package.xml
omnirob_robin_detection_reels/include/: image_detection.h  reels_robin_object.h  reels_robin_odlib.h
omnirob_robin_detection_reels/launch/: demo.launch  detect_ar_marker.launch  detection.launch
omnirob_robin_detection_reels/objects/: objects_reels.yaml
omnirob_robin_detection_reels/src/: detection_demo.cpp  detection_reels.cpp
omnirob_robin_diagnostics/: CMakeLists.txt  package.xml
omnirob_robin_diagnostics/config/: analyzer.yaml
omnirob_robin_diagnostics/launch/: diagnostics.launch
omnirob_robin_diagnostics/src/: diagnostics.cpp
omnirob_robin_driver/: CMakeLists.txt  CMakeLists.txt~  package.xml
omnirob_robin_driver/config/: joint_limits.yaml
omnirob_robin_driver/launch/: base_interface.launch  gripper_interface.launch  lwa_interface.launch  odometry.launch  odometry.yaml  real_interfaces.launch  simulated_base_only.launch  simulated_interfaces.launch  state_publisher.launch
omnirob_robin_driver/src/: base_driver.cpp  base_interface.cpp  gripper_hack.cpp  gripper_interface.cpp  omnirob_joint_state_publisher.cpp  omnirob_odometry_publisher_simulation_only.cpp  omnirob_robin_lwa_interface.cpp  pan_tilt_interface.cpp  state_machine_interface.cpp  teleop_joy.cpp  virtual_robot_driver_interface.cpp  virtuell_robot_driver_interface.cpp
omnirob_robin_dwa_local_planner/: CMakeLists.txt  local_planner_plugin.xml  package.xml
omnirob_robin_dwa_local_planner/cfg/: omnirob_robin_DWAPlanner.cfg
omnirob_robin_dwa_local_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp  variance_cost_function.cpp
omnirob_robin_gazebo/: CMakeLists.txt  package.xml
omnirob_robin_gazebo/launch/: omnirob_arena.launch  omnirob_empty-world.launch
omnirob_robin_gazebo/objects/: cylinder.urdf
omnirob_robin_gazebo/omnirob_robin/: CMakeLists.txt  package.xml
omnirob_robin_gazebo/omnirob_robin_control/: CMakeLists.txt
omnirob_robin_gazebo/omnirob_robin_description/: package.xml
omnirob_robin_gazebo/worlds/: arena.world  obstacles.world
omnirob_robin_moveit/: .setup_assistant  CMakeLists.txt  package.xml
omnirob_robin_moveit/action/: move_home.action  move_to_configuration.action  pick_and_place.action
omnirob_robin_moveit/config/: fake_controllers.yaml  kinematics.yaml  kinematics.yaml~  lwa_control_moveit.yaml  omnirob_robin.srdf  ompl_planning.yaml
omnirob_robin_moveit/launch/: move_group.launch  moveit_rviz.launch  pick_and_place_test.launch  setup_assistant.launch
omnirob_robin_moveit/src/: joint_states_publisher.cpp  move_home_server.cpp  omnirob_moveit.cpp  omnirob_moveit_backup.cpp  omnirob_moveit_simulation.cpp  pick_and_place_server.cpp  test_lwa_interface.cpp
omnirob_robin_moveit/srv/: AddCollisionObj.srv  ExecutePath.srv  PlanHome.srv
omnirob_robin_msgs/: CMakeLists.txt  package.xml
omnirob_robin_msgs/action/: HackBasMov.action  HackGripper.action  HackLwaMov.action  HackMark.action  HackObjRec.action
omnirob_robin_msgs/srv/: add_marker_srv.srv  execute.srv  get_object_pose.srv  localization.srv  move_gripper.srv  move_pan_tilt.srv
omnirob_robin_navigation/: CMakeLists.txt  package.xml
omnirob_robin_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  teb_local_planner_params.yaml
omnirob_robin_navigation/data/: marker_calibration.yaml  marker_calibration2.yaml
omnirob_robin_navigation/launch/: amcl.launch  amcl_2.launch  complete.launch  complete_amcl.launch  complete_amcl_2.launch  complete_hector.launch  complete_karto.launch  global_landmark_localization.launch  global_marker_localization_base.launch  gmapping.launch  hector.launch  hector_odom_only.launch  move_base.launch
omnirob_robin_navigation/map/: arena_packaging_machine.pgm  arena_packaging_machine.yaml  arena_raw.pgm  arena_raw.yaml  arena_raw2.pgm  arena_raw2.yaml  map_carap.pgm  map_carap.yaml  map_empty_crop.pgm  map_empty_crop.yaml  map_ok3.pgm  map_ok3.yaml  map_withObjects.pgm  map_withObjects.yaml  test.pgm  test.yaml
omnirob_robin_navigation/src/: global_localization.cpp  marker_localization_base.cpp  marker_localization_global.cpp  marker_localization_global_original.cpp
omnirob_robin_object_detection/: CMakeLists.txt  package.xml
omnirob_robin_object_detection/include/: object_detection.world  object_detection_world.launch  objects_spawner.launch  robin_object.h  robin_odlib.h  robin_odlib.h~  robin_odlib_ros.h  robin_shape.h~
omnirob_robin_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
omnirob_robin_rqt/launch/: rqt.sh
omnirob_robin_scan_matcher/: CMakeLists.txt  package.xml
omnirob_robin_stage/: CMakeLists.txt  package.xml
omnirob_robin_tools_ros/: CMakeLists.txt  package.xml
(+166 files in other folders)
