<?xml version="1.0"?>
<package>
  <name>omnirob_robin_bringup</name>
  <version>0.0.0</version>
  <description>
	The omnirob_robin_bringup package provides launch files for starting
	the omnirob with different functions
  </description>

  
  <maintainer email="proprentner.lukas@gmail.com">Lukas Proprentner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <run_depend>roomba_robin_description</run_depend>
</package>
