<?xml version="1.0"?>
<package>
  <name>omnirob_robin_diagnostics</name>
  <version>0.0.0</version>
  <description>The omnirob_robin_diagnostics package</description>

  <maintainer email="alexander.reiter@jku.at">Alexander Reiter</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/Robots/OmnirobRobin</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
