<?xml version="1.0"?>
<package>
  <name>omnirob_robin_driver</name>
  <version>0.0.0</version>
  <description>The omnirob_robin_driver package</description>

  
  <maintainer email="proprentner.lukas@gmail.com">lukas</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>omnirob_robin_msgs</build_depend>
  <build_depend>ros_common_robin_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rosserial_server</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>  
  
  <export>
  </export>
</package>
