<?xml version="1.0"?>
<package>
  <name>omnirob_robin_rqt</name>
  <version>0.0.0</version>
  <description>The omnirob_robin_rqt package</description>

  <maintainer email="proprentner.lukas@gmail.com">Lukas Proprentner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>python-rospkg</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>  
  <run_depend>rospy</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
