<?xml version="1.0"?>
<package>
  <name>omnirob_robin</name>
  <version>0.0.0</version>
  <description>
	The omnirob_robin meta package provides all the basic drivers.
  </description>

  
  <maintainer email="proprentner.lukas@gmail.com">Lukas Proprentner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>omnirob_robin_description</run_depend>
  <run_depend>omnirob_robin_bringup</run_depend>
  <run_depend>omnirob_robin_gazebo</run_depend>
  <run_depend>omnirob_robin_driver</run_depend>
  <run_depend>omnirob_robin_control</run_depend>

  
  <export>
    <metapackage/>
  </export>
</package>
