<?xml version="1.0"?>
<package>
  <name>omnirob_robin_description</name>
  <version>0.0.0</version>
  <description>
	roomba_robin_description provides a complete 3D model of the Omnirob
	the JKU Stack for simulation and visualisation
  </description>
  
  <maintainer email="proprentner.lukas@gmail.com">Lukas Proprentner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
 
</package>
